@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * In "orthanc.pyi", enumerations are not tagged as deriving from "enum.Enum" anymore:
   https://github.com/orthanc-server/orthanc-builder/issues/21
+* Docker-based builder scripts for Debian 12 (bookworm)
 
 
 Version 4.3 (2024-07-04)
